@@ -6,6 +6,9 @@ Changelog
 * Bug fix: send proper AT events when editing in aggregated edit; fixes
   plone.app.contentrules integration
   [tiberich #10038]
+* Change: don't try to change workflow for EEAFigureFiles anymore, as
+  they don't have an workflow anymore 
+  [tiberich #9976]
 
 5.5 - (2012-11-23)
 ------------------
